--- a/index.html
+++ b/index.html
@@ -5,12 +5,38 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <script src="https://unpkg.com/vue@3"></script>
   <link rel="stylesheet" href="css/style.css">
   <title>Vue To Do List</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="logo">
+      <img src="img/logo.png" alt="logo">
+    </div>
+
+    <div class="input-area">
+      <input type="text" placeholder="add new task">
+      <button>Aggiungi</button>
+    </div>
+
+    <div class="tasks-area">
+      <ul>
+        <li class="task">
+          <span>Studiare Vue</span>
+          <i class="fa-solid fa-x"></i>
+        </li>
+        <li class="task done">
+          <span>Fare la spesa</span>
+          <i class="fa-solid fa-x"></i>
+        </li>
+      </ul>
+
+      <!-- <h3>Non ci sono task da completare &#128526;!</h3> -->
+    </div>
+  </div>
   <script src="js/script.js"></script>
 </body>
 </html>
