--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Vue To Do List</title>
 </head>
 <body>
-  <div class="container">
+  <div id="app" class="container">
     <div class="logo">
       <img src="img/logo.png" alt="logo">
     </div>
@@ -25,11 +25,7 @@
     <div class="tasks-area">
       <ul>
         <li class="task">
-          <span>Studiare Vue</span>
-          <i class="fa-solid fa-x"></i>
-        </li>
-        <li class="task done">
-          <span>Fare la spesa</span>
+          <span></span>
           <i class="fa-solid fa-x"></i>
         </li>
       </ul>
