--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li v-for="(task, index) in tasks" class="task" :class="{'done': task.done}"
         @click = "task.done = !task.done">
           <span>{{task.text}}</span>
-          <i @click.stop="removeTask(index)" class="fa-solid fa-x"></i>
+          <i @click.stop="removeTask(index)" class="fa-solid fa-trash"></i>
         </li>
       </ul>
       <h3 v-else>Non ci sono task da completare &#128526;!</h3>
